--- a/styling/index.css
+++ b/styling/index.css
@@ -3680,7 +3680,7 @@ body[data-font-size="large"] {
     }
 
     #chat-header {
-        width: auto;
+        width: 100%;
     }
 
     #message-form {
