--- a/styling/index.css
+++ b/styling/index.css
@@ -309,9 +309,19 @@ body {
     #main-app {
         padding-bottom: calc(60px + env(safe-area-inset-bottom, 0px));
     }
+}
+
+@media (max-width: 909px) {
+    #chat-header {
+        top: calc(10px + env(safe-area-inset-top, 0px));
+    }
+
+    #messages-container {
+        padding-top: calc(150px + env(safe-area-inset-top, 0px));
+    }
 
     #message-form {
-        bottom: calc(60px + env(safe-area-inset-bottom, 0px));
+        bottom: env(safe-area-inset-bottom, 0px);
     }
 }
 
